added footer with so many buttons

--- a/index.html
+++ b/index.html
@@ -3,8 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Heliverse</title>
     <link rel="stylesheet" href="./style.css" />
+    <link
+      rel="shortcut icon"
+      href="https://www.svgrepo.com/show/499981/drive-brake.svg"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <div class="navbar">
@@ -18,6 +23,8 @@
         <input
           type="search"
           placeholder="Search by Random Name,Gender,Domain"
+          id="mySearch"
+          onkeyup="searchFunction()"
         />
       </div>
     </div>
@@ -57,13 +64,20 @@
       </select>
     </div>
 
-    <div class="para" style="text-align: center">
+    <div
+      class="para"
+      style="
+        text-align: center;
+        margin: 20px;
+        color: rgba(142, 139, 139, 0.873);
+        font-family: Arial, Helvetica, sans-serif;
+      "
+    >
       <p>
         U are not Created any team.<br />
         Please Create A Team.
       </p>
     </div>
-
 
     <!-- TEAM PROFILE      **************-->
     <div class="team_profile">
@@ -205,7 +219,6 @@
         </div>
       </div>
 
-
       <!-- TEAM3 ***************** -->
       <div class="team3">
         <div class="profile1">
@@ -275,7 +288,6 @@
         </div>
       </div>
 
-
       <!-- TEAM FOUR ************** -->
       <div class="team4">
         <div class="profile1">
@@ -283,8 +295,7 @@
             <img src="./images/rerumoptiorepudiandae16.png" alt="" />
           </div>
           <div class="about">
-            <p>Hertha Sterrick
-            </p>
+            <p>Hertha Sterrick</p>
             <p><span style="color: blue">Domain</span> - Marketing</p>
             <p><span style="color: blue">Gender</span> - Female</p>
           </div>
@@ -297,8 +308,7 @@
             <img src="./images/architectoomnisquia17.png" alt="" />
           </div>
           <div class="about">
-            <p>Benjamin Challiner
-            </p>
+            <p>Benjamin Challiner</p>
             <p><span style="color: blue">Domain</span> - Marketing</p>
             <p><span style="color: blue">Gender</span> - Male</p>
           </div>
@@ -311,8 +321,7 @@
             <img src="./images/cumquenoncommodi18.png" alt="" />
           </div>
           <div class="about">
-            <p>Lockwood Wermerling
-            </p>
+            <p>Lockwood Wermerling</p>
             <p><span style="color: blue">Domain</span> - Sales</p>
             <p><span style="color: blue">Gender</span> - Male</p>
           </div>
@@ -325,8 +334,7 @@
             <img src="./images/dolorumvelitquam19.png" alt="" />
           </div>
           <div class="about">
-            <p>Baillie Mulqueeny
-            </p>
+            <p>Baillie Mulqueeny</p>
             <p><span style="color: blue">Domain</span> - Business De</p>
             <p><span style="color: blue">Gender</span> - Male</p>
           </div>
@@ -339,8 +347,7 @@
             <img src="./images/delectusconsectetursed20.png" alt="" />
           </div>
           <div class="about">
-            <p>Quintus Gibbieson
-            </p>
+            <p>Quintus Gibbieson</p>
             <p><span style="color: blue">Domain</span> - Management</p>
             <p><span style="color: blue">Gender</span> - Male</p>
           </div>
@@ -349,7 +356,60 @@
           </div>
         </div>
       </div>
+    </div>
 
+    <div class="myFooter">
+      <button id="allButtons">1</button>
+      <button id="allButtons">2</button>
+      <button id="allButtons">3</button>
+      <button id="allButtons">4</button>
+      <button id="allButtons">5</button>
+      <button id="allButtons">6</button>
+      <button id="allButtons">7</button>
+      <button id="allButtons">8</button>
+      <button id="allButtons">9</button>
+      <button id="allButtons">10</button>
+      <button id="allButtons">11</button>
+      <button id="allButtons">12</button>
+      <button id="allButtons">13</button>
+      <button id="allButtons">14</button>
+      <button id="allButtons">15</button>
+      <button id="allButtons">16</button>
+      <button id="allButtons">17</button>
+      <button id="allButtons">18</button>
+      <button id="allButtons">19</button>
+      <button id="allButtons">20</button>
+      <button id="allButtons">21</button>
+      <button id="allButtons">22</button>
+      <button id="allButtons">23</button>
+      <button id="allButtons">24</button>
+      <button id="allButtons">25</button>
+      <button id="allButtons">26</button>
+      <button id="allButtons">27</button>
+      <button id="allButtons">28</button>
+      <button id="allButtons">29</button>
+      <button id="allButtons">30</button>
+      <button id="allButtons">31</button>
+      <button id="allButtons">32</button>
+      <button id="allButtons">33</button>
+      <button id="allButtons">34</button>
+      <button id="allButtons">35</button>
+      <button id="allButtons">36</button>
+      <button id="allButtons">37</button>
+      <button id="allButtons">38</button>
+      <button id="allButtons">39</button>
+      <button id="allButtons">40</button>
+      <button id="allButtons">41</button>
+      <button id="allButtons">42</button>
+      <button id="allButtons">43</button>
+      <button id="allButtons">44</button>
+      <button id="allButtons">45</button>
+      <button id="allButtons">46</button>
+      <button id="allButtons">47</button>
+      <button id="allButtons">48</button>
+      <button id="allButtons">49</button>
+      <button id="allButtons">50</button>
     </div>
   </body>
+  <script src="./script.js"></script>
 </html>
