little change in footer tag

--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
       </div>
     </div>
 
-    <div class="myFooter">
+    <footer class="myFooter">
       <button id="allButtons">1</button>
       <button id="allButtons">2</button>
       <button id="allButtons">3</button>
@@ -409,7 +409,7 @@
       <button id="allButtons">48</button>
       <button id="allButtons">49</button>
       <button id="allButtons">50</button>
-    </div>
+    </footer>
   </body>
   <script src="./script.js"></script>
 </html>
